# foot-mounted-ins

./: .gitignore  README.md  pyproject.toml
config/: device.example.py
scripts/: analyze_rest.py  ble_capture.py  ble_inspect.py  ble_scan.py
src/bootins/: error_dynamics.py  kalman.py  mechanization.py
src/bootins/bmu/: decode.py
src/bootins/frames/: euler.py  quaternion.py  rotations.py
tests/: test_decode.py  test_drift.py  test_error_dynamics.py  test_euler.py  test_kalman.py  test_mechanization.py  test_quaternion.py  test_rotations.py
